Sun Jan 26 21:58:16 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* expand_path.c (expand_path): Revise to call expand_string as
	needed.  Nuke PATH_MAX.
	* find_names.c (find_dirs): Likewise.
	* import.c, lock.c: Nuke more PATH_MAX.

	* server.c (mkdir_p): Set retval to 0 at start of function.
	Previously it had been uninitialized for some cases.  Thanks are
	due to nightly testing for catching this one.

Sat Jan 25 21:34:19 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* subr.c, cvs.h (expand_string): New function.
	* rcs.c (getrcskey, getrcsrev): Call it.  This greatly reduces the
	number of calls to realloc if there is a very large file in the
	RCS file.  Credit goes to Mike Heath <mike@pswtech.com> for
	pointing out the problem and the basic solution (MIN_INCR,
	MAX_INCR); I adapted it into the separate function expand_string.
	* sanity.sh (big): New test helps insure this hasn't broken
	anything obvious.

Wed Jan 22 10:06:13 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* status.c (status_fileproc): Change message which is printed for
	T_MODIFIED and ts_conflict set, so that it doesn't say "unresolved
	confict".  This message occurs whether the conflict is resolved or
	not.
	* sanity.sh (conflicts): Add tests conflicts-status-* to test
	output of "cvs status" in the context of conflicts.  Tests for
	above fix.

	* rtag.c (rtag): Send -n if run_module_prog is NOT true.

Thu Jan 16 00:06:00 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* version.c: Change version number to 1.9.3.

	* version.c: Version 1.9.2.

Wed Jan 15 09:14:38 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* client.c (call_in_directory): Take code that creates CVSADM at
	top level, move it before the CVS_CHDIR (dir_name) call, and do it
	regardless of whether dir_name is ".".  Pass "." not dir_name to
	Create_Admin (when the code was written they were always the
	same).  Don't add reposdirname to the repository we pass to